--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <h1>Welcome to the Easter Egg Hunt!</h1>
-  <img src="bunny.jpg" alt="Easter Bunny" width="300" />
+  <img src="kart.jpg" alt="Easter Bunny" width="300" />
   <p>Enter the password to continue:</p>
   <input type="text" id="answer" placeholder="Enter code here" />
   <button onclick="checkAnswer()">Submit</button>
