--- a/index.html
+++ b/index.html
@@ -7,20 +7,16 @@
   <title>Easter Hunt</title>
   <script>
     function checkAnswer() {
-      const input = document.getElementById("answer").value.toLowerCase();
-      if (input === "husafjellet") {
-        window.location.href = "success.html";
-      } else {
-        alert("Wrong answer! Try again.");
-      }
+        window.location.href = "nr2.html";
     }
   </script>
 </head>
 <body>
-  <h1>Welcome to the Easter Egg Hunt!</h1>
-  <img src="kart.jpg" alt="Easter Bunny" width="300" />
-  <p>Enter the password to continue:</p>
-  <input type="text" id="answer" placeholder="Enter code here" />
-  <button onclick="checkAnswer()">Submit</button>
+  <h1>Den store påskeeggjakten!</h1>
+  <p>Påskeharen har blitt tatt til fange av sinte høns!</p>
+  <p>Han trenger hjelp for å finne påskeeggene</p>
+  <img src="haren.png" alt="Easter Bunny" width="300" />
+  <p>Første ledetråd finner dere ved å trykke på knappen</p>
+  <button onclick="checkAnswer()">Neste</button>
 </body>
 </html>
